--- a/Assets/style.css
+++ b/Assets/style.css
@@ -10,12 +10,8 @@ body {
   color: white;
   text-align: center;
 }
-#test,
-#rules,
-#question1,
-#question2,
-#question3,
-#question4 {
+#quiz,
+#rules {
   border: #56e2e4 3px solid;
   padding: 10px 40px 40px 40px;
   width: 100%;
